# docker-stature

./: .travis.yml  Pipfile  README.md  docker2cachet.toml  requirements.txt  setup.cfg  setup.py  stature.py  test_stature.py  tox.ini
fixtures/: containers.json  docker-compose.yml
