[aliases]
# Remove all source and wheel builds.
distclean = rotate --keep=0 --match=.tar.gz,.whl,.asc clean
# Make source and wheel builds, then remove all of them but the latest.
build = sdist bdist_wheel rotate --keep=1 --match=.tar.gz,.whl,.asc


[metadata]
long_description = file: README.md

[wheel]
universal = True